Fixed scrollbar showing up in textarea in some browsers

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -46,7 +46,7 @@ body {
 
   /* Sizing */
   resize: none;
-  height: 1.5em;
+  height: 1.7em;
   width: 100%;
 }
 
